# RBDOOM-3-BFG

./: .gitignore  BUILD.gn
neo/: CMakeLists.txt  cmake-linux-debug-vulkan.sh  cmake-linux-debug.sh  cmake-linux-release-vulkan.sh  cmake-linux-release.sh
neo/framework/: FileSystem.cpp
neo/idlib/: BUILD.gn  precompiled.h
neo/idlib/geometry/: DrawVert.h
neo/idlib/sys/: sys_intrinsics.h
neo/idlib/sys/posix/: posix_thread.cpp
neo/libs/glew/include/GL/: defines.h
neo/renderer/: BufferObject.cpp  BufferObject.h  Framebuffer.cpp  GLMatrix.cpp  GLState.h  GuiModel.cpp  Image.h  ImageManager.cpp  Image_intrinsic.cpp  Image_load.cpp  Material.cpp  Material.h  ModelOverlay.cpp  Model_md5.cpp  RenderBackend.cpp  RenderBackend.h  RenderCommon.h  RenderLog.cpp  RenderLog.h  RenderProgs.cpp  RenderProgs.h  RenderProgs_GLSL.cpp  RenderSystem.cpp  RenderSystem.h  RenderSystem_init.cpp  RenderWorld.cpp  RenderWorld_portals.cpp  VertexCache.cpp  VertexCache.h  tr_backend_draw.cpp  tr_frontend_addmodels.cpp  tr_frontend_deform.cpp  tr_frontend_guisurf.cpp  tr_frontend_main.cpp  tr_frontend_subview.cpp  tr_trace.cpp
neo/renderer/OpenGL/: BufferObject_GL.cpp  Framebuffer_GL.cpp  Image_GL.cpp  RenderBackend_GL.cpp  RenderDebug_GL.cpp  RenderProgs_GL.cpp  RenderProgs_GLSL.cpp  RenderSystem_GL.cpp  gl_GraphicsAPIWrapper.cpp  gl_Image.cpp  gl_backend.cpp
neo/renderer/Vulkan/: Allocator_VK.cpp  Allocator_VK.h  BufferObject_VK.cpp  Image_VK.cpp  RenderBackend_VK.cpp  RenderDebug_VK.cpp  RenderProgs_VK.cpp  RenderSystem_VK.cpp  Staging_VK.cpp  qvk.h
neo/sys/posix/: platform_linux.cpp
neo/sys/sdl/: sdl_events.cpp  sdl_glimp.cpp
