# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

config("configuration") {
  include_dirs = [
    "neo",
    "neo/libs/glew/include",
    "neo/idlib",
    "neo/libs/jpeg-6",
    "neo/libs/png",
    "neo/libs/timidity",
    "neo/libs/zlib",
    "neo/libs/zlib/minizip",
    "//third_party/sdl/include",
  ]

  cflags_cc = [
    "-frtti",
    "-fexceptions",
  ]

  cflags = [
    "-pipe",
    "-w",
    "-Wno-error",
#    "-Wno-implicit-function-declaration",
    "-DUSE_INTRINSICS",
    "-DUSE_EXCEPTIONS",
    "-DUSE_DOOMCLASSIC",
    "-D__DOOM__",
#    "-DUSE_OPENAL",
  ]

  defines = [ "MOJO" ]
}

mojo_native_application("doom3bfg") {
  configs = [ ":configuration" ]

  deps = [
    "neo/idlib:idlib",
    "//mojo/public/c/gpu",
    "//mojo/public/c/gpu:gpu_onscreen",
    "//third_party/sdl",
  ]

  sources = [
    "neo/aas/AASFileManager.h",
    "neo/aas/AASFile.h",
    "neo/aas/AASFile_local.h",
    "neo/aas/AASFileManager.cpp",
    "neo/aas/AASFile_sample.cpp",
    "neo/aas/AASFile.cpp",
    "neo/aas/AASFile_optimize.cpp",
    "neo/cm/CollisionModel.h",
    "neo/cm/CollisionModel_local.h",
    "neo/cm/CollisionModel_trace.cpp",
    "neo/cm/CollisionModel_contacts.cpp",
    "neo/cm/CollisionModel_debug.cpp",
    "neo/cm/CollisionModel_files.cpp",
    "neo/cm/CollisionModel_contents.cpp",
    "neo/cm/CollisionModel_rotate.cpp",
    "neo/cm/CollisionModel_translate.cpp",
    "neo/cm/CollisionModel_load.cpp",
    "neo/framework/DemoChecksum.h",
    "neo/framework/DeclParticle.h",
    "neo/framework/Licensee.h",
    "neo/framework/DebugGraph.h",
    "neo/framework/DemoFile.h",
    "neo/framework/DeclPDA.h",
    "neo/framework/Console.h",
    "neo/framework/Unzip.h",
    "neo/framework/Common_local.h",
    "neo/framework/File_Manifest.h",
    "neo/framework/EditField.h",
    "neo/framework/CVarSystem.h",
    "neo/framework/TokenParser.h",
    "neo/framework/PlayerProfile.h",
    "neo/framework/Common.h",
    "neo/framework/File.h",
    "neo/framework/Compressor.h",
    "neo/framework/DeclEntityDef.h",
    "neo/framework/Serializer.h",
    "neo/framework/File_Resource.h",
    "neo/framework/DeclManager.h",
    "neo/framework/File_SaveGame.h",
    "neo/framework/ConsoleHistory.h",
    "neo/framework/CmdSystem.h",
    "neo/framework/FileSystem.h",
    "neo/framework/Common_dialog.h",
    "neo/framework/EventLoop.h",
    "neo/framework/DeclTable.h",
    "neo/framework/UsercmdGen.h",
    "neo/framework/DeclAF.h",
    "neo/framework/Zip.h",
    "neo/framework/DeclSkin.h",
    "neo/framework/KeyInput.h",
    "neo/framework/DeclFX.h",
    "neo/framework/BuildVersion.h",
    "neo/framework/DemoFile.cpp",
    "neo/framework/Common_load.cpp",
    "neo/framework/Common_network.cpp",
    "neo/framework/UsercmdGen.cpp",
    "neo/framework/DeclAF.cpp",
    "neo/framework/File_Manifest.cpp",
    "neo/framework/CVarSystem.cpp",
    "neo/framework/FileSystem.cpp",
    "neo/framework/TokenParser.cpp",
    "neo/framework/DeclParticle.cpp",
    "neo/framework/EditField.cpp",
    "neo/framework/Common_menu.cpp",
    "neo/framework/File_Resource.cpp",
    "neo/framework/PlayerProfile.cpp",
    "neo/framework/File_SaveGame.cpp",
    "neo/framework/EventLoop.cpp",
    "neo/framework/Console.cpp",
    "neo/framework/Common_dialog.cpp",
    "neo/framework/Common.cpp",
    "neo/framework/DeclSkin.cpp",
    "neo/framework/DebugGraph.cpp",
    "neo/framework/Compressor.cpp",
    "neo/framework/DeclEntityDef.cpp",
    "neo/framework/DeclTable.cpp",
    "neo/framework/Zip.cpp",
    "neo/framework/CmdSystem.cpp",
    "neo/framework/Common_printf.cpp",
    "neo/framework/KeyInput.cpp",
    "neo/framework/File.cpp",
    "neo/framework/ConsoleHistory.cpp",
    "neo/framework/DeclManager.cpp",
    "neo/framework/Common_localize.cpp",
    "neo/framework/common_frame.cpp",
    "neo/framework/precompiled.cpp",
    "neo/framework/DeclPDA.cpp",
    "neo/framework/Common_demos.cpp",
    "neo/framework/DeclFX.cpp",
    "neo/renderer/ResolutionScale.h",
    "neo/renderer/BufferObject.h",
    "neo/renderer/ModelDecal.h",
    "neo/renderer/ScreenRect.h",
    "neo/renderer/Font.h",
    "neo/renderer/RenderSystem.h",
    "neo/renderer/Model_ma.h",
    "neo/renderer/Image.h",
    "neo/renderer/RenderLog.h",
    "neo/renderer/Model_ase.h",
    "neo/renderer/RenderWorld.h",
    "neo/renderer/RenderWorld_local.h",
    "neo/renderer/GLState.h",
    "neo/renderer/Model.h",
    "neo/renderer/VertexCache.h",
    "neo/renderer/RenderProgs_embedded.h",
    "neo/renderer/Interaction.h",
    "neo/renderer/Material.h",
    "neo/renderer/GraphicsAPIWrapper.h",
    "neo/renderer/ModelOverlay.h",
    "neo/renderer/Model_lwo.h",
    "neo/renderer/ImageOpts.h",
    "neo/renderer/BinaryImageData.h",
    "neo/renderer/BoundsTrack.h",
    "neo/renderer/Cinematic.h",
    "neo/renderer/tr_local.h",
    "neo/renderer/GLMatrix.h",
    "neo/renderer/Model_md3.h",
    "neo/renderer/RenderContext.h",
    "neo/renderer/RenderProgs.h",
    "neo/renderer/simplex.h",
    "neo/renderer/Model_local.h",
    "neo/renderer/Framebuffer.h",
    "neo/renderer/BinaryImage.h",
    "neo/renderer/GuiModel.h",
    "neo/renderer/ModelManager.h",
    "neo/renderer/RenderEntity.cpp",
    "neo/renderer/RenderLog.cpp",
    "neo/renderer/RenderWorld_demo.cpp",
    "neo/renderer/BoundsTrack.cpp",
    "neo/renderer/GuiModel.cpp",
    "neo/renderer/tr_frontend_subview.cpp",
    "neo/renderer/RenderWorld_defs.cpp",
    "neo/renderer/Framebuffer.cpp",
    "neo/renderer/RenderProgs_GLSL.cpp",
    "neo/renderer/tr_trace.cpp",
    "neo/renderer/Model_ma.cpp",
    "neo/renderer/Model_ase.cpp",
    "neo/renderer/tr_trisurf.cpp",
    "neo/renderer/tr_frontend_main.cpp",
    "neo/renderer/Model_md5.cpp",
    "neo/renderer/Model_sprite.cpp",
    "neo/renderer/Model_prt.cpp",
    "neo/renderer/RenderSystem_init.cpp",
    "neo/renderer/tr_backend_draw.cpp",
    "neo/renderer/tr_frontend_guisurf.cpp",
    "neo/renderer/Model_md3.cpp",
    "neo/renderer/Model_beam.cpp",
    "neo/renderer/Interaction.cpp",
    "neo/renderer/GLMatrix.cpp",
    "neo/renderer/Material.cpp",
    "neo/renderer/Cinematic.cpp",
    "neo/renderer/ResolutionScale.cpp",
    "neo/renderer/Image_program.cpp",
    "neo/renderer/ImageManager.cpp",
    "neo/renderer/RenderSystem.cpp",
    "neo/renderer/tr_frontend_addmodels.cpp",
    "neo/renderer/Image_files.cpp",
    "neo/renderer/BinaryImage.cpp",
    "neo/renderer/Image_load.cpp",
    "neo/renderer/RenderWorld.cpp",
    "neo/renderer/Image_intrinsic.cpp",
    "neo/renderer/RenderProgs.cpp",
    "neo/renderer/VertexCache.cpp",
    "neo/renderer/ScreenRect.cpp",
    "neo/renderer/ModelOverlay.cpp",
    "neo/renderer/RenderWorld_portals.cpp",
    "neo/renderer/tr_frontend_addlights.cpp",
    "neo/renderer/Model_lwo.cpp",
    "neo/renderer/Model.cpp",
    "neo/renderer/RenderWorld_load.cpp",
    "neo/renderer/ModelManager.cpp",
    "neo/renderer/BufferObject.cpp",
#    "neo/renderer/tr_backend_rendertools.cpp",
    "neo/renderer/Font.cpp",
    "neo/renderer/Model_liquid.cpp",
    "neo/renderer/Image_process.cpp",
    "neo/renderer/tr_frontend_deform.cpp",
    "neo/renderer/ModelDecal.cpp",
    "neo/renderer/Color/ColorSpace.h",
    "neo/renderer/Color/ColorSpace.cpp",
    "neo/renderer/DXT/DXTCodec_local.h",
    "neo/renderer/DXT/DXTCodec.h",
    "neo/renderer/DXT/DXTDecoder.cpp",
    "neo/renderer/DXT/DXTEncoder.cpp",
    "neo/renderer/DXT/DXTEncoder_SSE2.cpp",
    "neo/renderer/jobs/ShadowShared.h",
    "neo/renderer/jobs/ShadowShared.cpp",
    "neo/renderer/jobs/dynamicshadowvolume/DynamicShadowVolume.h",
    "neo/renderer/jobs/dynamicshadowvolume/DynamicShadowVolume_local.h",
    "neo/renderer/jobs/dynamicshadowvolume/DynamicShadowVolume.cpp",
    "neo/renderer/jobs/prelightshadowvolume/PreLightShadowVolume_local.h",
    "neo/renderer/jobs/prelightshadowvolume/PreLightShadowVolume.h",
    "neo/renderer/jobs/prelightshadowvolume/PreLightShadowVolume.cpp",
    "neo/renderer/jobs/staticshadowvolume/StaticShadowVolume.h",
    "neo/renderer/jobs/staticshadowvolume/StaticShadowVolume_local.h",
    "neo/renderer/jobs/staticshadowvolume/StaticShadowVolume.cpp",
    "neo/renderer/OpenGL/gl_GraphicsAPIWrapper.cpp",
    "neo/renderer/OpenGL/gl_backend.cpp",
    "neo/renderer/OpenGL/gl_Image.cpp",
    "neo/libs/jpeg-6/jchuff.h",
    "neo/libs/jpeg-6/jconfig.h",
    "neo/libs/jpeg-6/jdct.h",
    "neo/libs/jpeg-6/jdhuff.h",
    "neo/libs/jpeg-6/jerror.h",
    "neo/libs/jpeg-6/jinclude.h",
    "neo/libs/jpeg-6/jmemsys.h",
    "neo/libs/jpeg-6/jmorecfg.h",
    "neo/libs/jpeg-6/jpegint.h",
    "neo/libs/jpeg-6/jpeglib.h",
    "neo/libs/jpeg-6/jversion.h",
    "neo/libs/jpeg-6/jcapimin.cpp",
    "neo/libs/jpeg-6/jcapistd.cpp",
    "neo/libs/jpeg-6/jccoefct.cpp",
    "neo/libs/jpeg-6/jccolor.cpp",
    "neo/libs/jpeg-6/jcdctmgr.cpp",
    "neo/libs/jpeg-6/jchuff.cpp",
    "neo/libs/jpeg-6/jcinit.cpp",
    "neo/libs/jpeg-6/jcmainct.cpp",
    "neo/libs/jpeg-6/jcmarker.cpp",
    "neo/libs/jpeg-6/jcmaster.cpp",
    "neo/libs/jpeg-6/jcomapi.cpp",
    "neo/libs/jpeg-6/jcparam.cpp",
    "neo/libs/jpeg-6/jcphuff.cpp",
    "neo/libs/jpeg-6/jcprepct.cpp",
    "neo/libs/jpeg-6/jcsample.cpp",
    "neo/libs/jpeg-6/jctrans.cpp",
    "neo/libs/jpeg-6/jdapimin.cpp",
    "neo/libs/jpeg-6/jdapistd.cpp",
    "neo/libs/jpeg-6/jdatadst.cpp",
    "neo/libs/jpeg-6/jdatasrc.cpp",
    "neo/libs/jpeg-6/jdcoefct.cpp",
    "neo/libs/jpeg-6/jdcolor.cpp",
    "neo/libs/jpeg-6/jddctmgr.cpp",
    "neo/libs/jpeg-6/jdhuff.cpp",
    "neo/libs/jpeg-6/jdinput.cpp",
    "neo/libs/jpeg-6/jdmainct.cpp",
    "neo/libs/jpeg-6/jdmarker.cpp",
    "neo/libs/jpeg-6/jdmaster.cpp",
    "neo/libs/jpeg-6/jdmerge.cpp",
    "neo/libs/jpeg-6/jdphuff.cpp",
    "neo/libs/jpeg-6/jdpostct.cpp",
    "neo/libs/jpeg-6/jdsample.cpp",
    "neo/libs/jpeg-6/jdtrans.cpp",
    "neo/libs/jpeg-6/jerror.cpp",
    "neo/libs/jpeg-6/jfdctflt.cpp",
    "neo/libs/jpeg-6/jfdctfst.cpp",
    "neo/libs/jpeg-6/jfdctint.cpp",
    "neo/libs/jpeg-6/jidctflt.cpp",
    "neo/libs/jpeg-6/jidctfst.cpp",
    "neo/libs/jpeg-6/jidctint.cpp",
    "neo/libs/jpeg-6/jidctred.cpp",
    "neo/libs/jpeg-6/jmemmgr.cpp",
    "neo/libs/jpeg-6/jmemnobs.cpp",
    "neo/libs/jpeg-6/jquant1.cpp",
    "neo/libs/jpeg-6/jquant2.cpp",
    "neo/libs/jpeg-6/jutils.cpp",
    "neo/libs/png/pngconf.h",
    "neo/libs/png/png.h",
    "neo/libs/png/pngwutil.c",
    "neo/libs/png/pngwrite.c",
    "neo/libs/png/pngtrans.c",
    "neo/libs/png/pngwtran.c",
    "neo/libs/png/pngwio.c",
    "neo/libs/png/pngread.c",
    "neo/libs/png/pnggccrd.c",
    "neo/libs/png/png.c",
    "neo/libs/png/example.c",
    "neo/libs/png/pngvcrd.c",
    "neo/libs/png/pngset.c",
    "neo/libs/png/pngget.c",
    "neo/libs/png/pngrtran.c",
    "neo/libs/png/pngrio.c",
    "neo/libs/png/pngrutil.c",
    "neo/libs/png/pngpread.c",
    "neo/libs/png/pngerror.c",
    "neo/libs/png/pngmem.c",
    "neo/libs/zlib//crc32.h",
    "neo/libs/zlib//inftrees.h",
    "neo/libs/zlib//inffast.h",
    "neo/libs/zlib//zconf.h",
    "neo/libs/zlib//deflate.h",
    "neo/libs/zlib//zconf.h.in",
    "neo/libs/zlib//gzguts.h",
    "neo/libs/zlib//zconf.h.included",
    "neo/libs/zlib//inffixed.h",
    "neo/libs/zlib//zlib.h",
    "neo/libs/zlib//trees.h",
    "neo/libs/zlib//zutil.h",
    "neo/libs/zlib//inflate.h",
    "neo/libs/zlib//trees.c",
    "neo/libs/zlib//uncompr.c",
    "neo/libs/zlib//gzclose.c",
    "neo/libs/zlib//deflate.c",
    "neo/libs/zlib//compress.c",
    "neo/libs/zlib//zutil.c",
    "neo/libs/zlib//inffast.c",
    "neo/libs/zlib//adler32.c",
    "neo/libs/zlib//infback.c",
    "neo/libs/zlib//crc32.c",
    "neo/libs/zlib//inflate.c",
    "neo/libs/zlib//gzlib.c",
    "neo/libs/zlib//gzwrite.c",
    "neo/libs/zlib//inftrees.c",
    "neo/libs/zlib//gzread.c",
    "neo/libs/zlib/minizip/zip.h",
    "neo/libs/zlib/minizip/unzip.h",
    "neo/libs/zlib/minizip/ioapi.h",
    "neo/libs/zlib/minizip/zip.cpp",
    "neo/libs/zlib/minizip/ioapi.c",
    "neo/libs/zlib/minizip/unzip.cpp",
#    "neo/libs/glew/include/GL/glew.h",
#    "neo/libs/glew/src/glew.c",
#    "neo/libs/glew/include/GL/glxew.h",
#    "neo/libs/freetype/src/autofit/autofit.c",
#    "neo/libs/freetype/src/bdf/bdf.c",
#    "neo/libs/freetype/src/cff/cff.c",
#    "neo/libs/freetype/src/base/ftbase.c",
#    "neo/libs/freetype/src/base/ftbitmap.c",
#    "neo/libs/freetype/src/cache/ftcache.c",
#    "neo/libs/freetype/src/base/ftdebug.c",
#    "neo/libs/freetype/src/base/ftgasp.c",
#    "neo/libs/freetype/src/base/ftglyph.c",
#    "neo/libs/freetype/src/gzip/ftgzip.c",
#    "neo/libs/freetype/src/base/ftinit.c",
#    "neo/libs/freetype/src/lzw/ftlzw.c",
#    "neo/libs/freetype/src/base/ftstroke.c",
#    "neo/libs/freetype/src/base/ftsystem.c",
#    "neo/libs/freetype/src/smooth/smooth.c",
#    "neo/libs/freetype/src/base/ftbbox.c",
#    "neo/libs/freetype/src/base/ftmm.c",
#    "neo/libs/freetype/src/base/ftpfr.c",
#    "neo/libs/freetype/src/base/ftsynth.c",
#    "neo/libs/freetype/src/base/fttype1.c",
#    "neo/libs/freetype/src/base/ftwinfnt.c",
#    "neo/libs/freetype/src/pcf/pcf.c",
#    "neo/libs/freetype/src/pfr/pfr.c",
#    "neo/libs/freetype/src/psaux/psaux.c",
#    "neo/libs/freetype/src/pshinter/pshinter.c",
#    "neo/libs/freetype/src/psnames/psmodule.c",
#    "neo/libs/freetype/src/raster/raster.c",
#    "neo/libs/freetype/src/sfnt/sfnt.c",
#    "neo/libs/freetype/src/truetype/truetype.c",
#    "neo/libs/freetype/src/type1/type1.c",
#    "neo/libs/freetype/src/cid/type1cid.c",
#    "neo/libs/freetype/src/type42/type42.c",
#    "neo/libs/freetype/src/winfonts/winfnt.c",
    "neo/sound/snd_local.h",
    "neo/sound/sound.h",
    "neo/sound/SoundVoice.h",
    "neo/sound/WaveFile.h",
    "neo/sound/snd_emitter.cpp",
    "neo/sound/snd_shader.cpp",
    "neo/sound/snd_system.cpp",
    "neo/sound/snd_world.cpp",
    "neo/sound/SoundVoice.cpp",
    "neo/sound/WaveFile.cpp",
#    "neo/sound/OpenAL/AL_SoundHardware.h",
#    "neo/sound/OpenAL/AL_SoundSample.h",
#    "neo/sound/OpenAL/AL_SoundVoice.h",
#    "neo/sound/OpenAL/AL_SoundHardware.cpp",
#    "neo/sound/OpenAL/AL_SoundSample.cpp",
#    "neo/sound/OpenAL/AL_SoundVoice.cpp",
    "neo/sound/stub/SoundStub.h",
    "neo/sound/stub/SoundSample.cpp",
    "neo/sys/sys_voicechat.h",
    "neo/sys/sys_localuser.h",
    "neo/sys/sys_leaderboards.h",
    "neo/sys/sys_stats.h",
    "neo/sys/PacketProcessor.h",
    "neo/sys/sys_lobby.h",
    "neo/sys/SnapshotProcessor.h",
    "neo/sys/sys_profile.h",
    "neo/sys/sys_signin.h",
    "neo/sys/LightweightCompression.h",
    "neo/sys/sys_stats_misc.h",
    "neo/sys/Snapshot.h",
    "neo/sys/sys_lobby_backend.h",
    "neo/sys/sys_lobby_backend_direct.h",
    "neo/sys/sys_session.h",
    "neo/sys/Snapshot_Jobs.h",
    "neo/sys/sys_achievements.h",
    "neo/sys/sys_public.h",
    "neo/sys/sys_dedicated_server_search.h",
#    "neo/sys/sys_defines.h",
    "neo/sys/sys_session_savegames.h",
    "neo/sys/sys_session_local.h",
    "neo/sys/sys_savegame.h",
    "neo/sys/sys_local.h",
    "neo/sys/PacketProcessor.cpp",
    "neo/sys/sys_lobby_migrate.cpp",
    "neo/sys/sys_session_callbacks.cpp",
    "neo/sys/Snapshot_Jobs.cpp",
    "neo/sys/sys_local.cpp",
    "neo/sys/sys_voicechat.cpp",
    "neo/sys/sys_dedicated_server_search.cpp",
    "neo/sys/sys_achievements.cpp",
    "neo/sys/sys_savegame.cpp",
    "neo/sys/LightweightCompression.cpp",
    "neo/sys/sys_session_savegames.cpp",
    "neo/sys/sys_lobby_backend_direct.cpp",
    "neo/sys/SnapshotProcessor.cpp",
    "neo/sys/sys_lobby.cpp",
    "neo/sys/sys_lobby_snapshot.cpp",
    "neo/sys/sys_localuser.cpp",
    "neo/sys/sys_signin.cpp",
    "neo/sys/sys_session_local.cpp",
    "neo/sys/sys_profile.cpp",
    "neo/sys/sys_lobby_users.cpp",
    "neo/sys/Snapshot.cpp",
    "neo/ui/RenderWindow.h",
    "neo/ui/SliderWindow.h",
    "neo/ui/UserInterface.h",
    "neo/ui/BindWindow.h",
    "neo/ui/RegExp_old.h",
    "neo/ui/ListWindow.h",
    "neo/ui/DeviceContext.h",
    "neo/ui/Winvar.h",
    "neo/ui/Rectangle.h",
    "neo/ui/RegExp.h",
    "neo/ui/GameBustOutWindow.h",
    "neo/ui/ListGUILocal.h",
    "neo/ui/EditWindow.h",
    "neo/ui/ListGUI.h",
    "neo/ui/SimpleWindow.h",
    "neo/ui/GuiScript.h",
    "neo/ui/GameSSDWindow.h",
    "neo/ui/ChoiceWindow.h",
    "neo/ui/GameBearShootWindow.h",
    "neo/ui/FieldWindow.h",
    "neo/ui/Window.h",
    "neo/ui/UserInterfaceLocal.h",
    "neo/ui/ListWindow.cpp",
    "neo/ui/EditWindow.cpp",
    "neo/ui/GuiScript.cpp",
    "neo/ui/UserInterface.cpp",
    "neo/ui/RenderWindow.cpp",
    "neo/ui/BindWindow.cpp",
    "neo/ui/ListGUI.cpp",
    "neo/ui/ChoiceWindow.cpp",
    "neo/ui/SimpleWindow.cpp",
    "neo/ui/Winvar.cpp",
    "neo/ui/GameBearShootWindow.cpp",
    "neo/ui/FieldWindow.cpp",
    "neo/ui/GameSSDWindow.cpp",
    "neo/ui/RegExp.cpp",
    "neo/ui/Window.cpp",
    "neo/ui/SliderWindow.cpp",
    "neo/ui/GameBustOutWindow.cpp",
    "neo/ui/DeviceContext.cpp",
    "neo/swf/SWF_Types.h",
    "neo/swf/SWF_ParmList.h",
    "neo/swf/SWF_ShapeParser.h",
    "neo/swf/SWF_Enums.h",
    "neo/swf/SWF_Bitstream.h",
    "neo/swf/SWF_Sprites.h",
    "neo/swf/SWF_TextInstance.h",
    "neo/swf/SWF_SpriteInstance.h",
    "neo/swf/SWF_ScriptVar.h",
    "neo/swf/SWF_ScriptFunction.h",
    "neo/swf/SWF_ScriptObject.h",
    "neo/swf/SWF.h",
    "neo/swf/SWF_TextInstance.cpp",
    "neo/swf/SWF_ScriptObject.cpp",
    "neo/swf/SWF_Load.cpp",
    "neo/swf/SWF_Sounds.cpp",
    "neo/swf/SWF_ParmList.cpp",
    "neo/swf/SWF_Text.cpp",
    "neo/swf/SWF_Bitstream.cpp",
    "neo/swf/SWF_Dictionary.cpp",
    "neo/swf/SWF_Names.cpp",
    "neo/swf/SWF_Render.cpp",
    "neo/swf/SWF_Main.cpp",
    "neo/swf/SWF_Sprites.cpp",
    "neo/swf/SWF_ScriptVar.cpp",
    "neo/swf/SWF_PlaceObject.cpp",
    "neo/swf/SWF_Shapes.cpp",
    "neo/swf/SWF_Events.cpp",
    "neo/swf/SWF_ScriptFunction.cpp",
    "neo/swf/SWF_Image.cpp",
    "neo/swf/SWF_Zlib.cpp",
    "neo/swf/SWF_ShapeParser.cpp",
    "neo/swf/SWF_SpriteInstance.cpp",
    "neo/d3xp/Achievements.h",
    "neo/d3xp/Actor.h",
    "neo/d3xp/AF.h",
    "neo/d3xp/AFEntity.h",
    "neo/d3xp/AimAssist.h",
    "neo/d3xp/BrittleFracture.h",
    "neo/d3xp/Camera.h",
    "neo/d3xp/EndLevel.h",
    "neo/d3xp/Entity.h",
    "neo/d3xp/Fx.h",
    "neo/d3xp/Game.h",
    "neo/d3xp/GameEdit.h",
    "neo/d3xp/Game_local.h",
    "neo/d3xp/Grabber.h",
    "neo/d3xp/IK.h",
    "neo/d3xp/Item.h",
    "neo/d3xp/Leaderboards.h",
    "neo/d3xp/Light.h",
    "neo/d3xp/Misc.h",
    "neo/d3xp/Moveable.h",
    "neo/d3xp/Mover.h",
    "neo/d3xp/MultiplayerGame.h",
    "neo/d3xp/Player.h",
    "neo/d3xp/PlayerIcon.h",
    "neo/d3xp/PlayerView.h",
    "neo/d3xp/PredictedValue.h",
    "neo/d3xp/Projectile.h",
    "neo/d3xp/Pvs.h",
    "neo/d3xp/SecurityCamera.h",
    "neo/d3xp/SmokeParticles.h",
    "neo/d3xp/Sound.h",
    "neo/d3xp/Target.h",
    "neo/d3xp/Trigger.h",
    "neo/d3xp/Weapon.h",
    "neo/d3xp/WorldSpawn.h",
    "neo/d3xp/Achievements.cpp",
    "neo/d3xp/Actor.cpp",
    "neo/d3xp/AF.cpp",
    "neo/d3xp/AFEntity.cpp",
    "neo/d3xp/AimAssist.cpp",
    "neo/d3xp/BrittleFracture.cpp",
    "neo/d3xp/Camera.cpp",
    "neo/d3xp/Entity.cpp",
    "neo/d3xp/Fx.cpp",
    "neo/d3xp/GameEdit.cpp",
    "neo/d3xp/Game_local.cpp",
    "neo/d3xp/Game_network.cpp",
    "neo/d3xp/Grabber.cpp",
    "neo/d3xp/IK.cpp",
    "neo/d3xp/Item.cpp",
    "neo/d3xp/Leaderboards.cpp",
    "neo/d3xp/Light.cpp",
    "neo/d3xp/Misc.cpp",
    "neo/d3xp/Moveable.cpp",
    "neo/d3xp/Mover.cpp",
    "neo/d3xp/MultiplayerGame.cpp",
    "neo/d3xp/Player.cpp",
    "neo/d3xp/PlayerIcon.cpp",
    "neo/d3xp/PlayerView.cpp",
    "neo/d3xp/precompiled.cpp",
    "neo/d3xp/Projectile.cpp",
    "neo/d3xp/Pvs.cpp",
    "neo/d3xp/SecurityCamera.cpp",
    "neo/d3xp/SmokeParticles.cpp",
    "neo/d3xp/Sound.cpp",
    "neo/d3xp/Target.cpp",
    "neo/d3xp/Trigger.cpp",
    "neo/d3xp/Weapon.cpp",
    "neo/d3xp/WorldSpawn.cpp",
    "neo/d3xp/ai/AAS_local.h",
    "neo/d3xp/ai/AAS.h",
    "neo/d3xp/ai/AI.h",
    "neo/d3xp/ai/AI.cpp",
    "neo/d3xp/ai/AAS_pathing.cpp",
    "neo/d3xp/ai/AI_Vagary.cpp",
    "neo/d3xp/ai/AAS_debug.cpp",
    "neo/d3xp/ai/AAS.cpp",
    "neo/d3xp/ai/AI_events.cpp",
    "neo/d3xp/ai/AI_pathing.cpp",
    "neo/d3xp/ai/AAS_routing.cpp",
    "neo/d3xp/anim/Anim.h",
    "neo/d3xp/anim/Anim_Testmodel.h",
    "neo/d3xp/anim/Anim_Blend.cpp",
    "neo/d3xp/anim/Anim.cpp",
    "neo/d3xp/anim/Anim_Testmodel.cpp",
    "neo/d3xp/gamesys/Event.h",
    "neo/d3xp/gamesys/SysCvar.h",
    "neo/d3xp/gamesys/SaveGame.h",
    "neo/d3xp/gamesys/Class.h",
    "neo/d3xp/gamesys/SysCmds.h",
#    "neo/d3xp/gamesys/Callbacks.cpp",
    "neo/d3xp/gamesys/Class.cpp",
#    "neo/d3xp/gamesys/DebugGraph.cpp",
    "neo/d3xp/gamesys/Event.cpp",
    "neo/d3xp/gamesys/SaveGame.cpp",
    "neo/d3xp/gamesys/SysCmds.cpp",
    "neo/d3xp/gamesys/SysCvar.cpp",
#    "neo/d3xp/gamesys/TypeInfo.cpp",
    "neo/d3xp/menus/MenuHandler.h",
    "neo/d3xp/menus/MenuWidget.h",
    "neo/d3xp/menus/MenuScreen.h",
    "neo/d3xp/menus/MenuHandler.cpp",
    "neo/d3xp/menus/MenuWidget_ItemAssignment.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_Stereoscopics.cpp",
    "neo/d3xp/menus/MenuWidget_MenuBar.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_NewGame.cpp",
    "neo/d3xp/menus/MenuWidget_NavBar.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_Singleplayer.cpp",
    "neo/d3xp/menus/MenuWidget_NavButton.cpp",
    "neo/d3xp/menus/MenuScreen_PDA_Inventory.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_Save.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_Playstation.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_MatchSettings.cpp",
    "neo/d3xp/menus/MenuWidget_PDA_Objective.cpp",
    "neo/d3xp/menus/MenuWidget_CommandBar.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_Dev.cpp",
    "neo/d3xp/menus/MenuWidget.cpp",
    "neo/d3xp/menus/MenuWidget_PDA_VideoInfo.cpp",
    "neo/d3xp/menus/MenuWidget_PDA_AudioFiles.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_Resolution.cpp",
    "neo/d3xp/menus/MenuScreen_PDA_VideoDisks.cpp",
    "neo/d3xp/menus/MenuScreen_HUD.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_Bindings.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_Difficulty.cpp",
    "neo/d3xp/menus/MenuHandler_Scoreboard.cpp",
    "neo/d3xp/menus/MenuWidget_Scrollbar.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_PartyLobby.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_Leaderboards.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_Settings.cpp",
    "neo/d3xp/menus/MenuWidget_List.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_SystemOptions.cpp",
    "neo/d3xp/menus/MenuWidget_LobbyList.cpp",
    "neo/d3xp/menus/MenuHandler_PDA.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_ControllerLayout.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_Load.cpp",
    "neo/d3xp/menus/MenuScreen_Scoreboard.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_Gamepad.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_PressStart.cpp",
    "neo/d3xp/menus/MenuWidget_InfoBox.cpp",
    "neo/d3xp/menus/MenuHandler_HUD.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_ModeSelect.cpp",
    "neo/d3xp/menus/MenuWidget_Button.cpp",
    "neo/d3xp/menus/MenuScreen_PDA_UserEmails.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_Controls.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_GameLobby.cpp",
    "neo/d3xp/menus/MenuWidget_DynamicList.cpp",
    "neo/d3xp/menus/MenuWidget_Carousel.cpp",
    "neo/d3xp/menus/MenuWidget_Help.cpp",
    "neo/d3xp/menus/MenuScreen.cpp",
    "neo/d3xp/menus/MenuScreen_PDA_UserData.cpp",
    "neo/d3xp/menus/MenuWidget_PDA_EmailInbox.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_Root.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_Pause.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_Credits.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_GameOptions.cpp",
    "neo/d3xp/menus/MenuWidget_PDA_UserData.cpp",
    "neo/d3xp/menus/MenuScreen_Shell_Browser.cpp",
    "neo/d3xp/menus/MenuWidget_Shell_SaveInfo.cpp",
    "neo/d3xp/menus/MenuHandler_Shell.cpp",
    "neo/d3xp/physics/Physics_AF.h",
    "neo/d3xp/physics/Force.h",
    "neo/d3xp/physics/Force_Drag.h",
    "neo/d3xp/physics/Physics_Actor.h",
    "neo/d3xp/physics/Physics_Monster.h",
    "neo/d3xp/physics/Force_Field.h",
    "neo/d3xp/physics/Force_Constant.h",
    "neo/d3xp/physics/Force_Spring.h",
    "neo/d3xp/physics/Physics_Base.h",
    "neo/d3xp/physics/Physics_StaticMulti.h",
    "neo/d3xp/physics/Physics_Parametric.h",
    "neo/d3xp/physics/Physics_Player.h",
    "neo/d3xp/physics/Push.h",
    "neo/d3xp/physics/Physics.h",
    "neo/d3xp/physics/Force_Grab.h",
    "neo/d3xp/physics/Clip.h",
    "neo/d3xp/physics/Physics_RigidBody.h",
    "neo/d3xp/physics/Physics_Static.h",
    "neo/d3xp/physics/Physics_Monster.cpp",
    "neo/d3xp/physics/Force_Constant.cpp",
    "neo/d3xp/physics/Force_Spring.cpp",
    "neo/d3xp/physics/Physics_Base.cpp",
    "neo/d3xp/physics/Force_Field.cpp",
    "neo/d3xp/physics/Physics_RigidBody.cpp",
    "neo/d3xp/physics/Force_Drag.cpp",
    "neo/d3xp/physics/Physics_StaticMulti.cpp",
    "neo/d3xp/physics/Physics_Player.cpp",
    "neo/d3xp/physics/Clip.cpp",
    "neo/d3xp/physics/Physics_Actor.cpp",
    "neo/d3xp/physics/Physics_Static.cpp",
    "neo/d3xp/physics/Physics.cpp",
    "neo/d3xp/physics/Force.cpp",
    "neo/d3xp/physics/Force_Grab.cpp",
    "neo/d3xp/physics/Push.cpp",
    "neo/d3xp/physics/Physics_AF.cpp",
    "neo/d3xp/physics/Physics_Parametric.cpp",
    "neo/d3xp/script/Script_Program.h",
    "neo/d3xp/script/Script_Interpreter.h",
    "neo/d3xp/script/Script_Compiler.h",
    "neo/d3xp/script/Script_Thread.h",
    "neo/d3xp/script/Script_Program.cpp",
    "neo/d3xp/script/Script_Interpreter.cpp",
    "neo/d3xp/script/Script_Compiler.cpp",
    "neo/d3xp/script/Script_Thread.cpp",
    "neo/tools/compilers/compiler_public.h",
    "neo/tools/compilers/aas/AASBuild_local.h",
    "neo/tools/compilers/aas/AASCluster.h",
    "neo/tools/compilers/aas/BrushBSP.h",
    "neo/tools/compilers/aas/Brush.h",
    "neo/tools/compilers/aas/AASReach.h",
    "neo/tools/compilers/aas/AASCluster.cpp",
    "neo/tools/compilers/aas/AASBuild_file.cpp",
    "neo/tools/compilers/aas/AASBuild_merge.cpp",
    "neo/tools/compilers/aas/AASBuild_gravity.cpp",
    "neo/tools/compilers/aas/AASReach.cpp",
    "neo/tools/compilers/aas/BrushBSP.cpp",
    "neo/tools/compilers/aas/AASBuild_ledge.cpp",
    "neo/tools/compilers/aas/Brush.cpp",
    "neo/tools/compilers/aas/AASBuild.cpp",
    "neo/tools/compilers/dmap/dmap.h",
    "neo/tools/compilers/dmap/glfile.cpp",
    "neo/tools/compilers/dmap/output.cpp",
    "neo/tools/compilers/dmap/tritjunction.cpp",
    "neo/tools/compilers/dmap/ubrush.cpp",
    "neo/tools/compilers/dmap/facebsp.cpp",
    "neo/tools/compilers/dmap/leakfile.cpp",
    "neo/tools/compilers/dmap/usurface.cpp",
    "neo/tools/compilers/dmap/map.cpp",
    "neo/tools/compilers/dmap/dmap.cpp",
    "neo/tools/compilers/dmap/portals.cpp",
    "neo/tools/compilers/dmap/tritools.cpp",
    "neo/tools/compilers/dmap/optimize.cpp",
    "neo/tools/compilers/dmap/gldraw.cpp",
#...."neo/tools/compilers/renderbump/*.h",
#...."neo/tools/compilers/renderbump/*.cpp",
#...."neo/tools/compilers/roqvq/*.h",
#...."neo/tools/compilers/roqvq/*.cpp",
#...."neo/tools/edit_public.h",
#...."neo/tools/comafx/*.h",
#...."neo/tools/comafx/*.cpp",
#...."neo/tools/common/ColorButton.h",
#...."neo/tools/common/DialogHelpers.h",
#...."neo/tools/common/MaskEdit.h",
#...."neo/tools/common/OpenFileDialog.h",
#...."neo/tools/common/PropertyGrid.h",
#...."neo/tools/common/RegistryOptions.h",
#...."neo/tools/common/RollupPanel.h",
#...."neo/tools/common/SpinButton.h)",
#...."neo/tools/common/AlphaPopup.cpp",
#...."neo/tools/common/ColorButton.cpp",
#...."neo/tools/common/MaskEdit.cpp",
#...."neo/tools/common/OpenFileDialog.cpp",
#...."neo/tools/common/PropertyGrid.cpp",
#...."neo/tools/common/RegistryOptions.cpp",
#...."neo/tools/common/RollupPanel.cpp",
#...."neo/tools/common/SpinButton.cpp)",
#...."neo/tools/common/PropTree/*.h",
#...."neo/tools/common/PropTree/*.cpp",
#...."neo/tools/af/*.h",
#...."neo/tools/af/*.cpp",
#...."neo/tools/decl/DialogDeclBrowser.h",
#...."neo/tools/decl/DialogDeclEditor.h",
#...."neo/tools/decl/DialogDeclNew.h",
#...."neo/tools/decl/DialogDeclBrowser.cpp",
#...."neo/tools/decl/DialogDeclEditor.cpp",
#...."neo/tools/decl/DialogDeclNew.cpp)",
#...."neo/tools/debugger/*.h",
#...."neo/tools/debugger/*.cpp",
#...."neo/tools/guied/*.h",
#...."neo/tools/guied/GEApp.cpp",
#...."neo/tools/guied/GECheckInDlg.cpp",
#...."neo/tools/guied/GEDeleteModifier.cpp",
#...."neo/tools/guied/GEHideModifier.cpp",
#...."neo/tools/guied/GEInsertModifier.cpp",
#...."neo/tools/guied/GEItemPropsDlg.cpp",
#...."neo/tools/guied/GEItemScriptsDlg.cpp",
#...."neo/tools/guied/GEKeyValueModifier.cpp",
#...."neo/tools/guied/GEModifier.cpp",
#...."neo/tools/guied/GEModifierGroup.cpp",
#...."neo/tools/guied/GEModifierStack.cpp",
#...."neo/tools/guied/GEMoveModifier.cpp",
#...."neo/tools/guied/GENavigator.cpp",
#...."neo/tools/guied/GEOptions.cpp",
#...."neo/tools/guied/GEOptionsDlg.cpp",
#...."neo/tools/guied/GEProperties.cpp",
#...."neo/tools/guied/GEPropertyPage.cpp",
#...."neo/tools/guied/GESelectionMgr.cpp",
#...."neo/tools/guied/GESizeModifier.cpp",
#...."neo/tools/guied/GEStateModifier.cpp",
#...."neo/tools/guied/GEStatusBar.cpp",
#...."neo/tools/guied/GETransformer.cpp",
#...."neo/tools/guied/GEViewer.cpp",
#...."neo/tools/guied/GEWindowWrapper.cpp",
#...."neo/tools/guied/GEWorkspace.cpp",
#...."neo/tools/guied/GEWorkspaceFile.cpp",
#...."neo/tools/guied/GEZOrderModifier.cpp",
#...."neo/tools/guied/guied.cpp",
#...."neo/tools/materialeditor/*.h",
#...."neo/tools/materialeditor/*.cpp",
#...."neo/tools/particle/*.h",
#...."neo/tools/particle/*.cpp",
#...."neo/tools/pda/*.h",
#...."neo/tools/pda/*.cpp",
#...."neo/tools/radiant/*.h",
#...."neo/tools/radiant/*.cpp",
#...."neo/tools/script/*.h",
#...."neo/tools/script/*.cpp",
    "doomclassic/doom/doomstat.h",
    "doomclassic/doom/w_wad.h",
    "doomclassic/doom/doomdata.h",
    "doomclassic/doom/p_mobj.h",
    "doomclassic/doom/d_textur.h",
    "doomclassic/doom/doominterface.h",
    "doomclassic/doom/p_spec.h",
    "doomclassic/doom/defs.h",
    "doomclassic/doom/constructs.h",
    "doomclassic/doom/m_menu.h",
    "doomclassic/doom/r_defs.h",
    "doomclassic/doom/f_wipe.h",
    "doomclassic/doom/m_random.h",
    "doomclassic/doom/r_main.h",
    "doomclassic/doom/globaldata.h",
    "doomclassic/doom/r_state.h",
    "doomclassic/doom/d_french.h",
    "doomclassic/doom/p_inter.h",
    "doomclassic/doom/st_stuff.h",
    "doomclassic/doom/doomtype.h",
    "doomclassic/doom/m_cheat.h",
    "doomclassic/doom/p_local.h",
    "doomclassic/doom/i_net.h",
    "doomclassic/doom/d_main.h",
    "doomclassic/doom/m_misc.h",
    "doomclassic/doom/r_bsp.h",
    "doomclassic/doom/i_video.h",
    "doomclassic/doom/s_sound.h",
    "doomclassic/doom/m_swap.h",
    "doomclassic/doom/typedefs.h",
    "doomclassic/doom/vars.h",
    "doomclassic/doom/sounds.h",
    "doomclassic/doom/v_video.h",
    "doomclassic/doom/hu_stuff.h",
    "doomclassic/doom/wi_stuff.h",
    "doomclassic/doom/am_map.h",
    "doomclassic/doom/r_sky.h",
    "doomclassic/doom/doomlib.h",
    "doomclassic/doom/p_tick.h",
    "doomclassic/doom/z_zone.h",
    "doomclassic/doom/st_lib.h",
    "doomclassic/doom/r_draw.h",
    "doomclassic/doom/Main.h",
    "doomclassic/doom/d_think.h",
    "doomclassic/doom/i_sound.h",
    "doomclassic/doom/p_setup.h",
    "doomclassic/doom/f_finale.h",
    "doomclassic/doom/tables.h",
    "doomclassic/doom/m_fixed.h",
    "doomclassic/doom/structs.h",
    "doomclassic/doom/d_englsh.h",
    "doomclassic/doom/r_data.h",
    "doomclassic/doom/doomdef.h",
    "doomclassic/doom/d_event.h",
    "doomclassic/doom/hu_lib.h",
    "doomclassic/doom/d_items.h",
    "doomclassic/doom/p_saveg.h",
    "doomclassic/doom/r_local.h",
    "doomclassic/doom/dstrings.h",
    "doomclassic/doom/p_pspr.h",
    "doomclassic/doom/r_segs.h",
    "doomclassic/doom/r_things.h",
    "doomclassic/doom/m_bbox.h",
    "doomclassic/doom/i_system.h",
    "doomclassic/doom/g_game.h",
    "doomclassic/doom/d_net.h",
    "doomclassic/doom/d_player.h",
    "doomclassic/doom/d_ticcmd.h",
    "doomclassic/doom/info.h",
    "doomclassic/doom/m_argv.h",
    "doomclassic/doom/r_plane.h",
    "doomclassic/doom/Precompiled.h",
    "doomclassic/doom/f_finale.cpp",
    "doomclassic/doom/m_swap.cpp",
    "doomclassic/doom/p_sight.cpp",
    "doomclassic/doom/p_setup.cpp",
    "doomclassic/doom/Precompiled.cpp",
    "doomclassic/doom/p_plats.cpp",
    "doomclassic/doom/i_sound_stub.cpp",
    "doomclassic/doom/p_mobj.cpp",
    "doomclassic/doom/v_video.cpp",
    "doomclassic/doom/st_lib.cpp",
    "doomclassic/doom/m_bbox.cpp",
    "doomclassic/doom/p_maputl.cpp",
    "doomclassic/doom/i_input.cpp",
    "doomclassic/doom/i_main.cpp",
    "doomclassic/doom/mus2midi.cpp",
    "doomclassic/doom/i_video_ps3.cpp",
    "doomclassic/doom/doomlib.cpp",
    "doomclassic/doom/st_stuff.cpp",
    "doomclassic/doom/tables.cpp",
    "doomclassic/doom/r_segs.cpp",
    "doomclassic/doom/p_telept.cpp",
    "doomclassic/doom/m_fixed.cpp",
    "doomclassic/doom/f_wipe.cpp",
    "doomclassic/doom/doominterface.cpp",
    "doomclassic/doom/doomdef.cpp",
    "doomclassic/doom/wi_stuff.cpp",
    "doomclassic/doom/d_items.cpp",
    "doomclassic/doom/d_main.cpp",
    "doomclassic/doom/globaldata.cpp",
    "doomclassic/doom/m_random.cpp",
    "doomclassic/doom/hu_stuff.cpp",
    "doomclassic/doom/i_net.cpp",
    "doomclassic/doom/p_floor.cpp",
    "doomclassic/doom/p_ceilng.cpp",
    "doomclassic/doom/m_menu.cpp",
    "doomclassic/doom/r_main.cpp",
    "doomclassic/doom/p_tick.cpp",
    "doomclassic/doom/hu_lib.cpp",
    "doomclassic/doom/r_data.cpp",
#    "doomclassic/doom/i_sound_win32.cpp",
    "doomclassic/doom/d_net.cpp",
    "doomclassic/doom/m_misc.cpp",
    "doomclassic/doom/i_net_win32.cpp",
    "doomclassic/doom/dstrings.cpp",
    "doomclassic/doom/p_pspr.cpp",
    "doomclassic/doom/p_map.cpp",
    "doomclassic/doom/p_user.cpp",
    "doomclassic/doom/m_argv.cpp",
    "doomclassic/doom/r_plane.cpp",
    "doomclassic/doom/m_cheat.cpp",
    "doomclassic/doom/g_game.cpp",
    "doomclassic/doom/r_things.cpp",
    "doomclassic/doom/w_wad.cpp",
    "doomclassic/doom/sounds.cpp",
    "doomclassic/doom/r_sky.cpp",
    "doomclassic/doom/r_bsp.cpp",
    "doomclassic/doom/p_enemy.cpp",
    "doomclassic/doom/z_zone.cpp",
    "doomclassic/doom/am_map.cpp",
    "doomclassic/doom/p_switch.cpp",
    "doomclassic/doom/doomstat.cpp",
#    "doomclassic/doom/i_sound_openal.cpp",
    "doomclassic/doom/info.cpp",
    "doomclassic/doom/i_system.cpp",
    "doomclassic/doom/p_doors.cpp",
    "doomclassic/doom/p_inter.cpp",
    "doomclassic/doom/s_sound.cpp",
    "doomclassic/doom/p_lights.cpp",
    "doomclassic/doom/p_spec.cpp",
    "doomclassic/doom/p_saveg.cpp",
    "doomclassic/doom/r_draw.cpp",
    "neo/libs/timidity/common.h",
    "neo/libs/timidity/filter.h",
    "neo/libs/timidity/output.h",
    "neo/libs/timidity/config.h",
    "neo/libs/timidity/playmidi.h",
    "neo/libs/timidity/readmidi.h",
    "neo/libs/timidity/instrum.h",
    "neo/libs/timidity/controls.h",
    "neo/libs/timidity/tables.h",
    "neo/libs/timidity/timidity.h",
    "neo/libs/timidity/structs.h",
    "neo/libs/timidity/mix.h",
    "neo/libs/timidity/resample.h",
    "neo/libs/timidity/output.cpp",
    "neo/libs/timidity/timidity.cpp",
    "neo/libs/timidity/common.cpp",
    "neo/libs/timidity/tables.cpp",
    "neo/libs/timidity/sdl_c.cpp",
    "neo/libs/timidity/instrum.cpp",
    "neo/libs/timidity/mix.cpp",
    "neo/libs/timidity/readmidi.cpp",
    "neo/libs/timidity/filter.cpp",
    "neo/libs/timidity/playmidi.cpp",
    "neo/libs/timidity/resample.cpp",
    "neo/libs/timidity/sdl_a.cpp",
    "neo/libs/timidity/controls.cpp",
    "neo/sys/posix/posix_public.h",
#    "neo/sys/posix/platform_osx.cpp",
    "neo/sys/posix/posix_main.cpp",
    "neo/sys/posix/posix_signal.cpp",
    "neo/sys/posix/platform_linux.cpp",
    "neo/sys/common/signin.h",
    "neo/sys/common/localuser.h",
    "neo/sys/common/achievements.cpp",
    "neo/sys/common/savegame.cpp",
    "neo/sys/common/socket_net.cpp",
    "neo/sys/common/signin.cpp",
    "neo/sys/common/session_local.cpp",
    "neo/sys/common/localuser.cpp",
    "neo/sys/sdl/sdl_local.h",
    "neo/sys/sdl/sdl2_scancode_mappings.h",
    "neo/sys/sdl/sdl_events.cpp",
    "neo/sys/sdl/sdl_cpu.cpp",
    "neo/sys/sdl/sdl_glimp.cpp",
  ]
}
